from dataclasses import dataclass
from typing import Tuple

@dataclass
class Order:
    order: Tuple[int]
